--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -33,9 +33,13 @@ exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 exec-once = hypridle
 
 # # # My applications # # #
-exec-once = [workspace 2] google-chrome-stable
-exec-once = [workspace 3; float; move 30 85; size 1270 1070] telegram-desktop
 exec-once = [workspace 1; float; move 80 150; size 1300 900] kitty tmux
+exec-once = [workspace 2] google-chrome-stable
+# exec-once = [workspace 3; float; move 30 85; size 1270 1070] telegram-desktop
+exec-once = [workspace 3] telegram-desktop
+exec-once = [workspace 3] time-desktop
+exec-once = [workspace 4; float; move 110 130; size 1270 930] io.github.alainm23.planify
+exec-once = [workspace 8] kitty /home/alchemmist/scripts/start_nvim_in_kb.sh
 exec-once = [workspace 10; float; move 160 140; size 1400 950] obsidian
 
 # For all categories, see https://wiki.h
@@ -172,6 +176,9 @@ windowrulev2 = float,class:^(monori)$
 windowrulev2 = center,class:^(monori)$
 windowrulev2 = size 1200 900,class:^(monori)$
 
+windowrulev2 = float, title:^termdown$
+windowrulev2 = center,title:^termdown$
+windowrulev2 = size 500 500,title:^termdown$
 
 layerrule = blur, notifications 
 layerrule = ignorezero, notifications
@@ -198,11 +205,15 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, O, togglesplit, # dwindle
 bind = ALT, SPACE, exec, wofi # Show the graphicall app launcher
 bind = $mainMod, S, exec, flameshot gui --path=$HOME/Pictures/screenshots/ --clipboard # take a screenshot
+bind = ,F12, exec,grim -g "$(slurp)" - | tee ~/Pictures/screenshots/$(date +%Y-%m-%d_%H-%M-%S).png | wl-copy
 bind = $mainMod SHIFT, R, exec, killall waybar ; waybar --config /home/alchemmist/.config/waybar/hypr-config.json --style /home/alchemmist/.config/waybar/hypr-style.css
 bind = $mainMod, W, exec, ~/scripts/swww_random.sh
 bind = $mainMod SHIFT, W, exec, kitty --title wallpaper_pack_selector /home/alchemmist/scripts/wallpaper_pack_selector.sh
 bind = SUPER, C, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
 bind = CTRL, apostrophe, exec, wtype -P right -p right
+bind = $mainMod SHIFT, C, exec, kitty /home/alchemmist/scripts/start_nvim_in_kb.sh
+bind = $mainMod SHIFT, T, exec, kitty --title termdown -e termdown 
+bind = $mainMod, SPACE, exec, wofi-emoji
 
 # ROG G15 Strix (2021) Specific binds
 bind = ,156, exec, rog-control-center # ASUS Armory crate key
