--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -8,7 +8,7 @@
 
 background {
     monitor =
-    path = /home/alchemmist/Pictures/wallpapers/nature/Leaves_03-4A71C.jpg
+    path = /home/alchemmist/.dotfiles/wallpapers/art/Screenshot_20210106-223910_Anistream-91893.png
 }
 
 input-field {
