--- a/waybar/hypr-config.json
+++ b/waybar/hypr-config.json
@@ -6,9 +6,15 @@
     "passthrough": false,
     "gtk-layer-shell": true,
     "height": 40,
-    "modules-left": ["custom/wofi", "clock#time", "clock#date", "hyprland/workspaces"],
+    "modules-left": ["custom/wofi", "custom/localtime", "clock#date", "hyprland/workspaces"],
     "modules-center": ["custom/google_calendar"],
     "modules-right": ["custom/pacman_updates", "custom/paru_updates", "custom/temperature","custom/disk_space", "memory","cpu", "network", "bluetooth", "temperature","battery", "backlight", "pulseaudio","pulseaudio#microphone", "custom/caffeine", "hyprland/language", "idle_inhibitor"],
+
+     "custom/localtime": {
+        "exec": "date +'%H:%M'",
+        "interval": 50,  
+        "format": "{}"  
+    },
 
     "custom/disk_space": {
         "exec": "df -h / | awk 'NR==2 {print $4}' | sed 's/[^0-9]*//g'",
@@ -112,6 +118,7 @@
 
     "clock#time": {
         "format": "{:%H:%M}",
+        "timezone": "Europe/Moscow",
         "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>"
     },
 
@@ -180,6 +187,7 @@
 
     "network": {
         // "interface": "wlp2*", // (Optional) To force the use of this interface
+        "max-length": 150,
         "format-wifi": "  {essid}",
         "format-ethernet": "{ipaddr}/{cidr}",
         "format-linked": "{ifname} (No IP)",
