--- a/.dotter/cache.toml
+++ b/.dotter/cache.toml
@@ -42,6 +42,7 @@
 "scripts/start_nvim_in_kb.sh" = "/home/alchemmist/scripts/start_nvim_in_kb.sh"
 "scripts/swww_random.sh" = "/home/alchemmist/scripts/swww_random.sh"
 "scripts/tdm.sh" = "/home/alchemmist/scripts/tdm.sh"
+"scripts/test.sh" = "/home/alchemmist/scripts/test.sh"
 "scripts/tmux_window_finder.sh" = "/home/alchemmist/scripts/tmux_window_finder.sh"
 "scripts/toggle_caffeine.sh" = "/home/alchemmist/scripts/toggle_caffeine.sh"
 "scripts/token.json" = "/home/alchemmist/scripts/token.json"
@@ -77,7 +78,6 @@
 "wallpapers/anime/child_of_earth_by_gydw1n_dd5r30b-F85E5.png" = "/home/alchemmist/Pictures/wallpapers/anime/child_of_earth_by_gydw1n_dd5r30b-F85E5.png"
 "wallpapers/anime/days_of_tomorrow_by_gydw1n_deifbo1-9F9AC.png" = "/home/alchemmist/Pictures/wallpapers/anime/days_of_tomorrow_by_gydw1n_deifbo1-9F9AC.png"
 "wallpapers/anime/forest-bicycle-twilight-road-landscape-hd-wallpaper-1a706843404b69c008403b0b3ceeb9db.jpg" = "/home/alchemmist/Pictures/wallpapers/anime/forest-bicycle-twilight-road-landscape-hd-wallpaper-1a706843404b69c008403b0b3ceeb9db.jpg"
-"wallpapers/anime/gruvbox-245F5.png" = "/home/alchemmist/Pictures/wallpapers/anime/gruvbox-245F5.png"
 "wallpapers/anime/gvo2kjle2uc41-C91AD.jpg" = "/home/alchemmist/Pictures/wallpapers/anime/gvo2kjle2uc41-C91AD.jpg"
 "wallpapers/anime/tranquility-84240.png" = "/home/alchemmist/Pictures/wallpapers/anime/tranquility-84240.png"
 "wallpapers/anime/wallhaven-1kzdg1.png" = "/home/alchemmist/Pictures/wallpapers/anime/wallhaven-1kzdg1.png"
@@ -130,7 +130,6 @@
 "wallpapers/meme/image-F8E40.png" = "/home/alchemmist/Pictures/wallpapers/meme/image-F8E40.png"
 "wallpapers/meme/linux-penguin-and-rainbow-background-imsv6hxt0e8zcl7m.jpg" = "/home/alchemmist/Pictures/wallpapers/meme/linux-penguin-and-rainbow-background-imsv6hxt0e8zcl7m.jpg"
 "wallpapers/meme/memes-feelsbadman-pepe-meme-wallpaper-0a5efadafdd1bdb36c48865ccc2a18eb.jpg" = "/home/alchemmist/Pictures/wallpapers/meme/memes-feelsbadman-pepe-meme-wallpaper-0a5efadafdd1bdb36c48865ccc2a18eb.jpg"
-"wallpapers/nature/Carmine_De_Fazio-6DFE8.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/Carmine_De_Fazio-6DFE8.jpg"
 "wallpapers/nature/Leaves_03-4A71C.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/Leaves_03-4A71C.jpg"
 "wallpapers/nature/forest-60771.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/forest-60771.jpg"
 "wallpapers/nature/forest-hut-5D0EB.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/forest-hut-5D0EB.jpg"
@@ -142,22 +141,15 @@
 "wallpapers/nature/les-derevia-cheremsha-tropinka.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/les-derevia-cheremsha-tropinka.jpg"
 "wallpapers/nature/manuel-ponce-luque-derevo-solntse-tree-sun.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/manuel-ponce-luque-derevo-solntse-tree-sun.jpg"
 "wallpapers/nature/more-volny-priliv-pasmurno-beregovaia-liniia-tuchi-dozhd-v-d.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/more-volny-priliv-pasmurno-beregovaia-liniia-tuchi-dozhd-v-d.jpg"
-"wallpapers/nature/mountain-sky-clouds-blue-pick.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/mountain-sky-clouds-blue-pick.jpg"
-"wallpapers/nature/nature-tree-fog.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/nature-tree-fog.jpg"
 "wallpapers/nature/okau-taranaki-new-zealand-1.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/okau-taranaki-new-zealand-1.jpg"
-"wallpapers/nature/priroda-derevya-les-tuman-6583.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/priroda-derevya-les-tuman-6583.jpg"
 "wallpapers/nature/priroda-gory-skaly-derevia-tuman-nebo-1.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/priroda-gory-skaly-derevia-tuman-nebo-1.jpg"
 "wallpapers/nature/priroda-gory-skaly-luna-noch-voda-more-senja-senia-norvegiia.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/priroda-gory-skaly-luna-noch-voda-more-senja-senia-norvegiia.jpg"
-"wallpapers/nature/priroda-les-derevia-53.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/priroda-les-derevia-53.jpg"
 "wallpapers/nature/priroda-les-derevo-osen-domik.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/priroda-les-derevo-osen-domik.jpg"
 "wallpapers/nature/priroda-peizazh-zima-sneg-gora-derevia-eli-teni.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/priroda-peizazh-zima-sneg-gora-derevia-eli-teni.jpg"
 "wallpapers/nature/sea-E1026.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/sea-E1026.jpg"
 "wallpapers/nature/skaly-oblaka-gorizont-rocks-clouds-horizon.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/skaly-oblaka-gorizont-rocks-clouds-horizon.jpg"
-"wallpapers/nature/tuman-voda-trava-derevia-fog-water-grass-trees.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/tuman-voda-trava-derevia-fog-water-grass-trees.jpg"
 "wallpapers/nature/vladimir-riabkov-iakutiia-rossiia-zima-sneg-sugroby-derevia.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/vladimir-riabkov-iakutiia-rossiia-zima-sneg-sugroby-derevia.jpg"
-"wallpapers/nature/wallhaven-3ljxm3.png" = "/home/alchemmist/Pictures/wallpapers/nature/wallhaven-3ljxm3.png"
 "wallpapers/nature/wallhaven-6d61g7.png" = "/home/alchemmist/Pictures/wallpapers/nature/wallhaven-6d61g7.png"
-"wallpapers/nature/wallhaven-p9z1mm.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/wallhaven-p9z1mm.jpg"
 "wallpapers/nature/wallhaven-r2ez6m.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/wallhaven-r2ez6m.jpg"
 "wallpapers/nature/wallhaven-rr92oj.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/wallhaven-rr92oj.jpg"
 "wallpapers/nature/zima-sneg-derevia-peizazh-elki-landscape-winter-snow-fir--10.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/zima-sneg-derevia-peizazh-elki-landscape-winter-snow-fir--10.jpg"
