--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -40,7 +40,7 @@ exec-once = [workspace 2] google-chrome-stable
 exec-once = [workspace 3] telegram-desktop
 exec-once = [workspace 3] time-desktop
 exec-once = [workspace 4; float; move 110 130; size 1270 930] io.github.alainm23.planify
-exec-once = [workspace 8] kitty /home/alchemmist/scripts/start_nvim_in_kb.sh
+# exec-once = [workspace 8] kitty /home/alchemmist/scripts/start_nvim_in_kb.sh
 exec-once = [workspace 10; float; move 160 140; size 1400 950] obsidian
 
 # For all categories, see https://wiki.h
@@ -85,10 +85,10 @@ decoration {
         passes = 3
     }
 
-    drop_shadow = yes
-    shadow_range = 0
-    shadow_render_power = 0
-    col.shadow = rgba(1a1a1aee)
+    drop_shadow = no
+    shadow_range = 5
+    shadow_render_power = 10
+    col.shadow = rgba(0, 0, 0, 50)
 }
 
 animations {
