--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -67,7 +67,8 @@ bind C-c new-session
 bind C-f command-prompt -p find-session 'switch-client -t %%'
 
 # session navigation
-bind BTab switch-client -l  # move to last session
+
+bind o switch-client -l  # move to last session
 
 # split current window horizontally
 bind - split-window -v
