--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -84,11 +84,9 @@ decoration {
         size = 7
         passes = 3
     }
-
-    drop_shadow = no
-    shadow_range = 5
-    shadow_render_power = 10
-    col.shadow = rgba(0, 0, 0, 50)
+    shadow {
+        enabled = false
+    }
 }
 
 animations {
