--- a/.dotter/cache.toml
+++ b/.dotter/cache.toml
@@ -38,6 +38,7 @@
 "scripts/battery_stat.sh" = "/home/alchemmist/scripts/battery_stat.sh"
 "scripts/create_tex_figure.sh" = "/home/alchemmist/scripts/create_tex_figure.sh"
 "scripts/google-calendar.py" = "/home/alchemmist/scripts/google-calendar.py"
+"scripts/obsidian_rm_note.py" = "/home/alchemmist/scripts/obsidian_rm_note.py"
 "scripts/requirements.txt" = "/home/alchemmist/scripts/requirements.txt"
 "scripts/start_nvim_in_kb.sh" = "/home/alchemmist/scripts/start_nvim_in_kb.sh"
 "scripts/swww_random.sh" = "/home/alchemmist/scripts/swww_random.sh"
@@ -46,6 +47,7 @@
 "scripts/tmux_window_finder.sh" = "/home/alchemmist/scripts/tmux_window_finder.sh"
 "scripts/toggle_caffeine.sh" = "/home/alchemmist/scripts/toggle_caffeine.sh"
 "scripts/token.json" = "/home/alchemmist/scripts/token.json"
+"scripts/vpn-toggler.sh" = "/home/alchemmist/scripts/vpn-toggler.sh"
 "scripts/wallpaper_pack_selector.sh" = "/home/alchemmist/scripts/wallpaper_pack_selector.sh"
 "ssh/config" = "/home/alchemmist/.ssh/config"
 "sway/config" = "/home/alchemmist/.config/sway/config"
@@ -173,6 +175,41 @@
 "waybar/style/style.css" = "/home/alchemmist/.config/waybar/style/style.css"
 "waybar/sway-config.json" = "/home/alchemmist/.config/waybar/sway-config.json"
 "waybar/sway-style.css" = "/home/alchemmist/.config/waybar/sway-style.css"
+"waybar/wireguard-manager/.git/HEAD" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/HEAD"
+"waybar/wireguard-manager/.git/config" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/config"
+"waybar/wireguard-manager/.git/description" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/description"
+"waybar/wireguard-manager/.git/hooks/applypatch-msg.sample" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/hooks/applypatch-msg.sample"
+"waybar/wireguard-manager/.git/hooks/commit-msg.sample" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/hooks/commit-msg.sample"
+"waybar/wireguard-manager/.git/hooks/fsmonitor-watchman.sample" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/hooks/fsmonitor-watchman.sample"
+"waybar/wireguard-manager/.git/hooks/post-update.sample" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/hooks/post-update.sample"
+"waybar/wireguard-manager/.git/hooks/pre-applypatch.sample" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/hooks/pre-applypatch.sample"
+"waybar/wireguard-manager/.git/hooks/pre-commit.sample" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/hooks/pre-commit.sample"
+"waybar/wireguard-manager/.git/hooks/pre-merge-commit.sample" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/hooks/pre-merge-commit.sample"
+"waybar/wireguard-manager/.git/hooks/pre-push.sample" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/hooks/pre-push.sample"
+"waybar/wireguard-manager/.git/hooks/pre-rebase.sample" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/hooks/pre-rebase.sample"
+"waybar/wireguard-manager/.git/hooks/pre-receive.sample" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/hooks/pre-receive.sample"
+"waybar/wireguard-manager/.git/hooks/prepare-commit-msg.sample" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/hooks/prepare-commit-msg.sample"
+"waybar/wireguard-manager/.git/hooks/push-to-checkout.sample" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/hooks/push-to-checkout.sample"
+"waybar/wireguard-manager/.git/hooks/sendemail-validate.sample" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/hooks/sendemail-validate.sample"
+"waybar/wireguard-manager/.git/hooks/update.sample" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/hooks/update.sample"
+"waybar/wireguard-manager/.git/index" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/index"
+"waybar/wireguard-manager/.git/info/exclude" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/info/exclude"
+"waybar/wireguard-manager/.git/logs/HEAD" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/logs/HEAD"
+"waybar/wireguard-manager/.git/logs/refs/heads/main" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/logs/refs/heads/main"
+"waybar/wireguard-manager/.git/logs/refs/remotes/origin/HEAD" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/logs/refs/remotes/origin/HEAD"
+"waybar/wireguard-manager/.git/objects/pack/pack-ba526cc1176ee4f0f00c02f1254d7e3381905ec4.idx" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/objects/pack/pack-ba526cc1176ee4f0f00c02f1254d7e3381905ec4.idx"
+"waybar/wireguard-manager/.git/objects/pack/pack-ba526cc1176ee4f0f00c02f1254d7e3381905ec4.pack" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/objects/pack/pack-ba526cc1176ee4f0f00c02f1254d7e3381905ec4.pack"
+"waybar/wireguard-manager/.git/objects/pack/pack-ba526cc1176ee4f0f00c02f1254d7e3381905ec4.rev" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/objects/pack/pack-ba526cc1176ee4f0f00c02f1254d7e3381905ec4.rev"
+"waybar/wireguard-manager/.git/packed-refs" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/packed-refs"
+"waybar/wireguard-manager/.git/refs/heads/main" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/refs/heads/main"
+"waybar/wireguard-manager/.git/refs/remotes/origin/HEAD" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/refs/remotes/origin/HEAD"
+"waybar/wireguard-manager/LICENSE" = "/home/alchemmist/.config/waybar/wireguard-manager/LICENSE"
+"waybar/wireguard-manager/README.md" = "/home/alchemmist/.config/waybar/wireguard-manager/README.md"
+"waybar/wireguard-manager/rofi.rasi" = "/home/alchemmist/.config/waybar/wireguard-manager/rofi.rasi"
+"waybar/wireguard-manager/screenshots/password-prompt.png" = "/home/alchemmist/.config/waybar/wireguard-manager/screenshots/password-prompt.png"
+"waybar/wireguard-manager/screenshots/vpn-off.png" = "/home/alchemmist/.config/waybar/wireguard-manager/screenshots/vpn-off.png"
+"waybar/wireguard-manager/screenshots/vpn-on.png" = "/home/alchemmist/.config/waybar/wireguard-manager/screenshots/vpn-on.png"
+"waybar/wireguard-manager/wireguard-manager.sh" = "/home/alchemmist/.config/waybar/wireguard-manager/wireguard-manager.sh"
 "wlinitrc/wlinitrc" = "/home/alchemmist/.local/bin/wlinitrc"
 "wofi/config" = "/home/alchemmist/.config/wofi/config"
 "wofi/style/style-dark.css" = "/home/alchemmist/.config/wofi/style/style-dark.css"
