--- a/.dotter/cache.toml
+++ b/.dotter/cache.toml
@@ -35,6 +35,8 @@
 "nvim/lua/plugins/configs/telescope.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/telescope.lua"
 "nvim/lua/plugins/configs/treesitter.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/treesitter.lua"
 "nvim/lua/plugins/init.lua" = "/home/alchemmist/.config/nvim/lua/plugins/init.lua"
+"scripts/ask-sudo-pass.sh" = "/home/alchemmist/scripts/ask-sudo-pass.sh"
+"scripts/ask_pass.css" = "/home/alchemmist/scripts/ask_pass.css"
 "scripts/battery_stat.sh" = "/home/alchemmist/scripts/battery_stat.sh"
 "scripts/create_tex_figure.sh" = "/home/alchemmist/scripts/create_tex_figure.sh"
 "scripts/google-calendar.py" = "/home/alchemmist/scripts/google-calendar.py"
@@ -120,6 +122,7 @@
 "wallpapers/cities/darkcity-141C3.jpeg" = "/home/alchemmist/Pictures/wallpapers/cities/darkcity-141C3.jpeg"
 "wallpapers/cities/gm85u1w0dgi51-4F830.jpg" = "/home/alchemmist/Pictures/wallpapers/cities/gm85u1w0dgi51-4F830.jpg"
 "wallpapers/cities/israel-sundseth-1683-unsplash-4CC6D.jpg" = "/home/alchemmist/Pictures/wallpapers/cities/israel-sundseth-1683-unsplash-4CC6D.jpg"
+"wallpapers/cities/iurii-stolypin-piter-sankt-peterburg-gorod-ulitsy-doma-zdani.jpg" = "/home/alchemmist/Pictures/wallpapers/cities/iurii-stolypin-piter-sankt-peterburg-gorod-ulitsy-doma-zdani.jpg"
 "wallpapers/cities/sdghsfghsrthsrt-C88A2.jpg" = "/home/alchemmist/Pictures/wallpapers/cities/sdghsfghsrthsrt-C88A2.jpg"
 "wallpapers/cities/unknown-A89DC.png" = "/home/alchemmist/Pictures/wallpapers/cities/unknown-A89DC.png"
 "wallpapers/cities/unknown-AA38F.png" = "/home/alchemmist/Pictures/wallpapers/cities/unknown-AA38F.png"
@@ -132,28 +135,25 @@
 "wallpapers/meme/image-F8E40.png" = "/home/alchemmist/Pictures/wallpapers/meme/image-F8E40.png"
 "wallpapers/meme/linux-penguin-and-rainbow-background-imsv6hxt0e8zcl7m.jpg" = "/home/alchemmist/Pictures/wallpapers/meme/linux-penguin-and-rainbow-background-imsv6hxt0e8zcl7m.jpg"
 "wallpapers/meme/memes-feelsbadman-pepe-meme-wallpaper-0a5efadafdd1bdb36c48865ccc2a18eb.jpg" = "/home/alchemmist/Pictures/wallpapers/meme/memes-feelsbadman-pepe-meme-wallpaper-0a5efadafdd1bdb36c48865ccc2a18eb.jpg"
-"wallpapers/nature/Leaves_03-4A71C.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/Leaves_03-4A71C.jpg"
-"wallpapers/nature/forest-60771.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/forest-60771.jpg"
-"wallpapers/nature/forest-hut-5D0EB.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/forest-hut-5D0EB.jpg"
 "wallpapers/nature/forest_trees_fog_110131_1920x1080-3A6A1.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/forest_trees_fog_110131_1920x1080-3A6A1.jpg"
-"wallpapers/nature/gory-gora-sneg-the-mountains-mountain-snow.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/gory-gora-sneg-the-mountains-mountain-snow.jpg"
-"wallpapers/nature/ho-chi-minh-city-saigon.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/ho-chi-minh-city-saigon.jpg"
+"wallpapers/nature/grenlandiia-ford-skorsbi-priroda-peizazh-gory-aisbergi-ldiny.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/grenlandiia-ford-skorsbi-priroda-peizazh-gory-aisbergi-ldiny.jpg"
 "wallpapers/nature/karsten-wurth-7BjhtdogU3A-unsplash-33DDD.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/karsten-wurth-7BjhtdogU3A-unsplash-33DDD.jpg"
-"wallpapers/nature/lake-grundlsee-styria-austria-alps-ozero-grundlze-shchtiriia.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/lake-grundlsee-styria-austria-alps-ozero-grundlze-shchtiriia.jpg"
-"wallpapers/nature/les-derevia-cheremsha-tropinka.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/les-derevia-cheremsha-tropinka.jpg"
+"wallpapers/nature/konstantin-voronov-chernogoriia-priroda-peizazh-gory-tserkov.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/konstantin-voronov-chernogoriia-priroda-peizazh-gory-tserkov.jpg"
+"wallpapers/nature/les-peizazh-priroda-tuman.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/les-peizazh-priroda-tuman.jpg"
 "wallpapers/nature/manuel-ponce-luque-derevo-solntse-tree-sun.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/manuel-ponce-luque-derevo-solntse-tree-sun.jpg"
 "wallpapers/nature/more-volny-priliv-pasmurno-beregovaia-liniia-tuchi-dozhd-v-d.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/more-volny-priliv-pasmurno-beregovaia-liniia-tuchi-dozhd-v-d.jpg"
+"wallpapers/nature/nebo-oblaka-peizazh-vetrogeneratory-11.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/nebo-oblaka-peizazh-vetrogeneratory-11.jpg"
+"wallpapers/nature/niderlandy-utro-tuman-derevia-sosny-luna-polnolunie.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/niderlandy-utro-tuman-derevia-sosny-luna-polnolunie.jpg"
+"wallpapers/nature/norvegiia-lofoteny-priroda-peizazh-gory-skaly-lofotenskie-os.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/norvegiia-lofoteny-priroda-peizazh-gory-skaly-lofotenskie-os.jpg"
 "wallpapers/nature/okau-taranaki-new-zealand-1.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/okau-taranaki-new-zealand-1.jpg"
+"wallpapers/nature/peizazh-park-voda-derevia-sneg-zima-vecher-osveshchenie.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/peizazh-park-voda-derevia-sneg-zima-vecher-osveshchenie.jpg"
 "wallpapers/nature/priroda-gory-skaly-derevia-tuman-nebo-1.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/priroda-gory-skaly-derevia-tuman-nebo-1.jpg"
-"wallpapers/nature/priroda-gory-skaly-luna-noch-voda-more-senja-senia-norvegiia.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/priroda-gory-skaly-luna-noch-voda-more-senja-senia-norvegiia.jpg"
-"wallpapers/nature/priroda-les-derevo-osen-domik.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/priroda-les-derevo-osen-domik.jpg"
-"wallpapers/nature/priroda-peizazh-zima-sneg-gora-derevia-eli-teni.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/priroda-peizazh-zima-sneg-gora-derevia-eli-teni.jpg"
+"wallpapers/nature/rene-unger-priroda-peizazh-bavariia-gory-alpy-kholmy-doroga.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/rene-unger-priroda-peizazh-bavariia-gory-alpy-kholmy-doroga.jpg"
 "wallpapers/nature/sea-E1026.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/sea-E1026.jpg"
-"wallpapers/nature/skaly-oblaka-gorizont-rocks-clouds-horizon.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/skaly-oblaka-gorizont-rocks-clouds-horizon.jpg"
+"wallpapers/nature/the-province-of-alsace-france-winter-snow-provintsiia-elzas.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/the-province-of-alsace-france-winter-snow-provintsiia-elzas.jpg"
+"wallpapers/nature/val-gardena-italy-valley-christmas-val-gardena-italiia-dolin.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/val-gardena-italy-valley-christmas-val-gardena-italiia-dolin.jpg"
 "wallpapers/nature/vladimir-riabkov-iakutiia-rossiia-zima-sneg-sugroby-derevia.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/vladimir-riabkov-iakutiia-rossiia-zima-sneg-sugroby-derevia.jpg"
-"wallpapers/nature/wallhaven-6d61g7.png" = "/home/alchemmist/Pictures/wallpapers/nature/wallhaven-6d61g7.png"
-"wallpapers/nature/wallhaven-r2ez6m.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/wallhaven-r2ez6m.jpg"
-"wallpapers/nature/wallhaven-rr92oj.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/wallhaven-rr92oj.jpg"
+"wallpapers/nature/winter-snow-frost-sunset.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/winter-snow-frost-sunset.jpg"
 "wallpapers/nature/zima-sneg-derevia-peizazh-elki-landscape-winter-snow-fir--10.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/zima-sneg-derevia-peizazh-elki-landscape-winter-snow-fir--10.jpg"
 "wallpapers/nature/zima-sneg-iney-derevya-pole.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/zima-sneg-iney-derevya-pole.jpg"
 "wallpapers/space/IMG_20200603_210356-1C874.jpg" = "/home/alchemmist/Pictures/wallpapers/space/IMG_20200603_210356-1C874.jpg"
