--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -34,12 +34,11 @@ exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 exec-once = hypridle
 
 # # # My applications # # #
-exec-once = [workspace 1; float; move 80 150; size 1300 900] kitty tmux
-exec-once = [workspace 2] google-chrome-stable
+exec-once = [workspace 1; float; move 120 150; size 1200 850] kitty tmux
+exec-once = [workspace 2; float; center; size 1545 1110] google-chrome-stable
 # exec-once = [workspace 3; float; move 30 85; size 1270 1070] telegram-desktop
 exec-once = [workspace 3] telegram-desktop
 exec-once = [workspace 3] time-desktop
-exec-once = [workspace 4; float; move 110 130; size 1270 930] io.github.alainm23.planify
 # exec-once = [workspace 8] kitty /home/alchemmist/scripts/start_nvim_in_kb.sh
 exec-once = [workspace 10; float; move 160 140; size 1400 950] obsidian
 
@@ -78,14 +77,21 @@ decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     rounding = 15
+    shadow {
+        enabled          = true       # Включить тени
+        range            = 95         # Увеличенный размер тени для мягкости
+        render_power     = 40          # Оптимальный градиент для плавного перехода
+        sharp            = false      # Отключить резкость для более мягкого эффекта
+        ignore_window    = true      # Рендерить тень позади окна
+        color            = 0xee000000 # Темный оттенок для активных окон
+        color_inactive   = 0x66000000 # Более светлый оттенок для неактивных окон
+        scale            = 0.95       # Немного уменьшить тени для аккуратности
+    }
     
     blur { 
         enabled = true
         size = 7
         passes = 3
-    }
-    shadow {
-        enabled = false
     }
 }
 
