--- a/.dotter/cache.toml
+++ b/.dotter/cache.toml
@@ -63,6 +63,7 @@
 "wallpapers/abstract/nordterm2-76FE9.png" = "/home/alchemmist/Pictures/wallpapers/abstract/nordterm2-76FE9.png"
 "wallpapers/abstract/pacman-9D537.png" = "/home/alchemmist/Pictures/wallpapers/abstract/pacman-9D537.png"
 "wallpapers/abstract/qsave_2020-12-20_027-900CC.png" = "/home/alchemmist/Pictures/wallpapers/abstract/qsave_2020-12-20_027-900CC.png"
+"wallpapers/abstract/sand-desert-morocco-wallpaper-nature.jpg" = "/home/alchemmist/Pictures/wallpapers/abstract/sand-desert-morocco-wallpaper-nature.jpg"
 "wallpapers/abstract/sway_wallpaper.png" = "/home/alchemmist/Pictures/wallpapers/abstract/sway_wallpaper.png"
 "wallpapers/abstract/uckgbxxfvdr21-08722.png" = "/home/alchemmist/Pictures/wallpapers/abstract/uckgbxxfvdr21-08722.png"
 "wallpapers/abstract/v1-74ABF.png" = "/home/alchemmist/Pictures/wallpapers/abstract/v1-74ABF.png"
@@ -175,34 +176,6 @@
 "waybar/style/style.css" = "/home/alchemmist/.config/waybar/style/style.css"
 "waybar/sway-config.json" = "/home/alchemmist/.config/waybar/sway-config.json"
 "waybar/sway-style.css" = "/home/alchemmist/.config/waybar/sway-style.css"
-"waybar/wireguard-manager/.git/HEAD" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/HEAD"
-"waybar/wireguard-manager/.git/config" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/config"
-"waybar/wireguard-manager/.git/description" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/description"
-"waybar/wireguard-manager/.git/hooks/applypatch-msg.sample" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/hooks/applypatch-msg.sample"
-"waybar/wireguard-manager/.git/hooks/commit-msg.sample" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/hooks/commit-msg.sample"
-"waybar/wireguard-manager/.git/hooks/fsmonitor-watchman.sample" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/hooks/fsmonitor-watchman.sample"
-"waybar/wireguard-manager/.git/hooks/post-update.sample" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/hooks/post-update.sample"
-"waybar/wireguard-manager/.git/hooks/pre-applypatch.sample" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/hooks/pre-applypatch.sample"
-"waybar/wireguard-manager/.git/hooks/pre-commit.sample" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/hooks/pre-commit.sample"
-"waybar/wireguard-manager/.git/hooks/pre-merge-commit.sample" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/hooks/pre-merge-commit.sample"
-"waybar/wireguard-manager/.git/hooks/pre-push.sample" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/hooks/pre-push.sample"
-"waybar/wireguard-manager/.git/hooks/pre-rebase.sample" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/hooks/pre-rebase.sample"
-"waybar/wireguard-manager/.git/hooks/pre-receive.sample" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/hooks/pre-receive.sample"
-"waybar/wireguard-manager/.git/hooks/prepare-commit-msg.sample" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/hooks/prepare-commit-msg.sample"
-"waybar/wireguard-manager/.git/hooks/push-to-checkout.sample" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/hooks/push-to-checkout.sample"
-"waybar/wireguard-manager/.git/hooks/sendemail-validate.sample" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/hooks/sendemail-validate.sample"
-"waybar/wireguard-manager/.git/hooks/update.sample" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/hooks/update.sample"
-"waybar/wireguard-manager/.git/index" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/index"
-"waybar/wireguard-manager/.git/info/exclude" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/info/exclude"
-"waybar/wireguard-manager/.git/logs/HEAD" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/logs/HEAD"
-"waybar/wireguard-manager/.git/logs/refs/heads/main" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/logs/refs/heads/main"
-"waybar/wireguard-manager/.git/logs/refs/remotes/origin/HEAD" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/logs/refs/remotes/origin/HEAD"
-"waybar/wireguard-manager/.git/objects/pack/pack-ba526cc1176ee4f0f00c02f1254d7e3381905ec4.idx" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/objects/pack/pack-ba526cc1176ee4f0f00c02f1254d7e3381905ec4.idx"
-"waybar/wireguard-manager/.git/objects/pack/pack-ba526cc1176ee4f0f00c02f1254d7e3381905ec4.pack" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/objects/pack/pack-ba526cc1176ee4f0f00c02f1254d7e3381905ec4.pack"
-"waybar/wireguard-manager/.git/objects/pack/pack-ba526cc1176ee4f0f00c02f1254d7e3381905ec4.rev" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/objects/pack/pack-ba526cc1176ee4f0f00c02f1254d7e3381905ec4.rev"
-"waybar/wireguard-manager/.git/packed-refs" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/packed-refs"
-"waybar/wireguard-manager/.git/refs/heads/main" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/refs/heads/main"
-"waybar/wireguard-manager/.git/refs/remotes/origin/HEAD" = "/home/alchemmist/.config/waybar/wireguard-manager/.git/refs/remotes/origin/HEAD"
 "waybar/wireguard-manager/LICENSE" = "/home/alchemmist/.config/waybar/wireguard-manager/LICENSE"
 "waybar/wireguard-manager/README.md" = "/home/alchemmist/.config/waybar/wireguard-manager/README.md"
 "waybar/wireguard-manager/rofi.rasi" = "/home/alchemmist/.config/waybar/wireguard-manager/rofi.rasi"
