--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -35,7 +35,7 @@ exec-once = hypridle
 
 # # # My applications # # #
 exec-once = [workspace 1; float; move 120 150; size 1200 850] kitty tmux
-exec-once = [workspace 2; float; center; size 1545 1110] google-chrome-stable
+exec-once = [workspace 2; float; center; size 1445 1090] google-chrome-stable
 # exec-once = [workspace 3; float; move 30 85; size 1270 1070] telegram-desktop
 exec-once = [workspace 3] telegram-desktop
 exec-once = [workspace 3] time-desktop
@@ -100,13 +100,17 @@ animations {
 
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+    # bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+    #
+    # animation = windows, 1, 7, myBezier
+    # animation = windowsOut, 1, 7, default, popin 80%
+    # animation = border, 1, 10, default
+    # animation = fade, 1, 7, default
+    # animation = workspaces, 1, 6, default
 
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+    bezier = subtleBounce, 0.2, 0.8, 0.3, 1.0  ; Более плавная кривая
+    animation = windowsIn, 1, 5, subtleBounce, slide bottom popin 90% ; Ускоренная анимация, меньший подскок
+    animation = windowsOut, 1, 5, subtleBounce, slide bottom popout 90% ; Ускоренная анимация
 }
 
 dwindle {
