--- a/.dotter/cache.toml
+++ b/.dotter/cache.toml
@@ -42,6 +42,7 @@
 "scripts/google-calendar.py" = "/home/alchemmist/scripts/google-calendar.py"
 "scripts/obsidian_rm_note.py" = "/home/alchemmist/scripts/obsidian_rm_note.py"
 "scripts/requirements.txt" = "/home/alchemmist/scripts/requirements.txt"
+"scripts/rofi.rasi" = "/home/alchemmist/scripts/rofi.rasi"
 "scripts/start_nvim_in_kb.sh" = "/home/alchemmist/scripts/start_nvim_in_kb.sh"
 "scripts/swww_random.sh" = "/home/alchemmist/scripts/swww_random.sh"
 "scripts/tdm.sh" = "/home/alchemmist/scripts/tdm.sh"
@@ -51,6 +52,7 @@
 "scripts/token.json" = "/home/alchemmist/scripts/token.json"
 "scripts/vpn-toggler.sh" = "/home/alchemmist/scripts/vpn-toggler.sh"
 "scripts/wallpaper_pack_selector.sh" = "/home/alchemmist/scripts/wallpaper_pack_selector.sh"
+"scripts/wireguard-manager.sh" = "/home/alchemmist/scripts/wireguard-manager.sh"
 "ssh/config" = "/home/alchemmist/.ssh/config"
 "sway/config" = "/home/alchemmist/.config/sway/config"
 "tmux/.tmux.conf" = "/home/alchemmist/.tmux.conf"
@@ -176,13 +178,6 @@
 "waybar/style/style.css" = "/home/alchemmist/.config/waybar/style/style.css"
 "waybar/sway-config.json" = "/home/alchemmist/.config/waybar/sway-config.json"
 "waybar/sway-style.css" = "/home/alchemmist/.config/waybar/sway-style.css"
-"waybar/wireguard-manager/LICENSE" = "/home/alchemmist/.config/waybar/wireguard-manager/LICENSE"
-"waybar/wireguard-manager/README.md" = "/home/alchemmist/.config/waybar/wireguard-manager/README.md"
-"waybar/wireguard-manager/rofi.rasi" = "/home/alchemmist/.config/waybar/wireguard-manager/rofi.rasi"
-"waybar/wireguard-manager/screenshots/password-prompt.png" = "/home/alchemmist/.config/waybar/wireguard-manager/screenshots/password-prompt.png"
-"waybar/wireguard-manager/screenshots/vpn-off.png" = "/home/alchemmist/.config/waybar/wireguard-manager/screenshots/vpn-off.png"
-"waybar/wireguard-manager/screenshots/vpn-on.png" = "/home/alchemmist/.config/waybar/wireguard-manager/screenshots/vpn-on.png"
-"waybar/wireguard-manager/wireguard-manager.sh" = "/home/alchemmist/.config/waybar/wireguard-manager/wireguard-manager.sh"
 "wlinitrc/wlinitrc" = "/home/alchemmist/.local/bin/wlinitrc"
 "wofi/config" = "/home/alchemmist/.config/wofi/config"
 "wofi/style/style-dark.css" = "/home/alchemmist/.config/wofi/style/style-dark.css"
