--- a/.dotter/cache.toml
+++ b/.dotter/cache.toml
@@ -8,6 +8,7 @@
 "kitty/gruvbox.conf" = "/home/alchemmist/.config/kitty/gruvbox.conf"
 "kitty/kitty.conf" = "/home/alchemmist/.config/kitty/kitty.conf"
 "kitty/mocha.conf" = "/home/alchemmist/.config/kitty/mocha.conf"
+"mako/config" = "/home/alchemmist/.config/mako/config"
 "nvim/init.lua" = "/home/alchemmist/.config/nvim/init.lua"
 "nvim/lazy-lock.json" = "/home/alchemmist/.config/nvim/lazy-lock.json"
 "nvim/lua/core/bootstrap.lua" = "/home/alchemmist/.config/nvim/lua/core/bootstrap.lua"
@@ -40,6 +41,7 @@
 "scripts/battery_stat.sh" = "/home/alchemmist/scripts/battery_stat.sh"
 "scripts/create_tex_figure.sh" = "/home/alchemmist/scripts/create_tex_figure.sh"
 "scripts/google-calendar.py" = "/home/alchemmist/scripts/google-calendar.py"
+"scripts/notification_mode.sh" = "/home/alchemmist/scripts/notification_mode.sh"
 "scripts/obsidian_rm_note.py" = "/home/alchemmist/scripts/obsidian_rm_note.py"
 "scripts/requirements.txt" = "/home/alchemmist/scripts/requirements.txt"
 "scripts/rofi.rasi" = "/home/alchemmist/scripts/rofi.rasi"
@@ -49,7 +51,6 @@
 "scripts/test.sh" = "/home/alchemmist/scripts/test.sh"
 "scripts/tmux_window_finder.sh" = "/home/alchemmist/scripts/tmux_window_finder.sh"
 "scripts/toggle_caffeine.sh" = "/home/alchemmist/scripts/toggle_caffeine.sh"
-"scripts/token.json" = "/home/alchemmist/scripts/token.json"
 "scripts/vpn-toggler.sh" = "/home/alchemmist/scripts/vpn-toggler.sh"
 "scripts/wallpaper_pack_selector.sh" = "/home/alchemmist/scripts/wallpaper_pack_selector.sh"
 "scripts/wireguard-manager.sh" = "/home/alchemmist/scripts/wireguard-manager.sh"
