--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -60,7 +60,7 @@ label {
     color = $foreground
     font_size = 15
     font_family = JetBrainsMonoNerdFontMono-ExtraLightItalic
-    position = -15 10
+    position = -15, 10
     halign = right
     valign = bottom
 }
@@ -71,7 +71,7 @@ label {
     color = %foreground
     font_size = 15
     font_family = JetBrainsMonoNerdFontMono-ExtraLightItalic
-    position = -50 10
+    position = -50, 10
     halign = right
     valign = bottom
 }
